Migrate to JoyUI and add styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
+body {
+  background-color: #d1e5d9!important;
+  background-image: url("/bg.png"),linear-gradient(180deg,#e5f1ec 0%,#e5f1ec 322px,#d1e5d9 322px)!important;
+  background-repeat: no-repeat!important;
+  background-position: center 83px,0 0!important;
+  background-size: 2250px,auto!important;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
